assign route feature updated

--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ HOST_URL=http://localhost:3000
 
 APP_KEY=AIzaSyAohHVnzFeWJ3mEPr0sR98j_Q4MEfCVlgM
 AUTH_DOMAIN=fb-express-d6a56.firebaseapp.com
-DATABASE_URL=
+DATABASE_URL=https://fb-express-d6a56-default-rtdb.firebaseio.com/
 PROJECT_ID=fb-express-d6a56
 STORAGE_BUCKET=fb-express-d6a56.appspot.com
 MESSAGE_SENDER_ID=496050874177
