--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
         "dev": "nodemon index.js"
     },
     "keywords": [],
-    "author": "",
+    "author": "Bhargab Nath",
     "license": "ISC",
     "dependencies": {
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "firebase": "^8.2.4",
+        "firebase-admin": "^9.4.2",
         "jsonwebtoken": "^8.5.1",
         "nodemailer": "^6.4.17"
     }
